auth and register layout fixes; home page layout fixes; loading and no record placeholder component added; feedback message component added; view component fixes; edit tournament fixed; minor fixes;

--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -45,6 +45,7 @@
 
       & > .footnote {
         text-align: center;
+        margin-top: $default-distance * 1;
 
         span {
           margin-right: $default-distance * 0.25;
