--- a/src/app/components/tournament/add-edit.component.html
+++ b/src/app/components/tournament/add-edit.component.html
@@ -8,7 +8,7 @@
       <!-- begin breadcrumb -->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
+          <li class="breadcrumb-item"><a [routerLink]="'/'">Home</a></li>
           <li class="breadcrumb-item">
             <a [routerLink]="['/tournament', 'list']">My Tournaments</a>
           </li>
@@ -22,7 +22,7 @@
       <!-- begin form -->
       <form #form="ngForm" (ngSubmit)="save(form)">
         <div class="form-group">
-          <input type="hidden" name="id" [(ngModel)]="item._id" />
+          <input type="hidden" name="id" [(ngModel)]="tournament._id" />
         </div>
 
         <!-- begin name field -->
@@ -34,7 +34,7 @@
             id="nameTextField"
             placeholder="e.g. Tournament Y, Tournament Z"
             name="item"
-            [(ngModel)]="item.name"
+            [(ngModel)]="tournament.name"
             required
           />
         </div>
@@ -51,7 +51,7 @@
             id="descTextField"
             placeholder="e.g. it is a soccer competition where the players confront each other only once."
             name="description"
-            [(ngModel)]="item.description"
+            [(ngModel)]="tournament.description"
           >
           </textarea>
         </div>
@@ -77,7 +77,7 @@
         <div class="row">
           <div
             class="col-sm-6"
-            *ngFor="let participant of item.participants; let i = index"
+            *ngFor="let participant of tournament.participants; let i = index"
           >
             <div class="input-group mb-2">
               <span class="input-group-text text-sm"> #{{ i + 1 }} </span>
@@ -120,7 +120,7 @@
             class="form-control"
             id="startedAtTextField"
             name="startedAt"
-            [(ngModel)]="item.startedAt"
+            [(ngModel)]="tournament.startedAt"
             required
           />
         </div>
@@ -134,7 +134,7 @@
             id="completed"
             name="completed"
             class="form-check-input"
-            [(ngModel)]="item.completed"
+            [(ngModel)]="tournament.completed"
           />
           <label class="form-check-label" for="completed"> Completed </label>
         </div>
@@ -147,7 +147,7 @@
             id="deleted"
             name="deleted"
             class="form-check-input"
-            [(ngModel)]="item.deleted"
+            [(ngModel)]="tournament.deleted"
           />
           <label class="form-check-label" for="deleted"> Hidden </label>
         </div>
@@ -160,8 +160,8 @@
           <i class="fa-solid fa-pen-to-square"></i>
           Submit
         </button>
-
-        <a href="#" href="/" class="btn btn-secondary">
+        <span>&nbsp;</span>
+        <a [routerLink]="'/'" class="btn btn-secondary">
           <i class="fa-solid fa-rotate-left"></i>
           Cancel
         </a>
