Revert "UI and component fixes"

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,72 +1,57 @@
 <section class="section-auth">
   <div class="auth-container">
     <div class="brand">
-      <a [routerLink]="'/'">
+      <a href="/">
         <img class="brand" src="/assets/img/BLPRS.svg" />
       </a>
     </div>
 
     <div class="form">
-      <!-- begin error message -->
-      <feedback-message [message]="message" [error]="true"></feedback-message>
-      <!-- end error message -->
+      <div
+        class="bg-danger mt-2 p-2 text-center text-white"
+        *ngIf="message != null"
+      >
+        {{ message }}
+      </div>
       <div class="greeting">Hi There!</div>
-      <!-- begin authentication form -->
       <form novalidate #form="ngForm" (ngSubmit)="authenticate(form)">
-        <div class="row">
-          <!-- begin username -->
-          <div class="col-12">
-            <div class="form-group mb-2">
-              <label for="username" class="form-label"> Username </label>
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                name="username"
-                placeholder="Enter your username"
-                [(ngModel)]="username"
-              />
-            </div>
-          </div>
-          <!-- end username -->
-          <!-- begin password -->
-          <div class="col-12">
-            <div class="form-group">
-              <label for="password" class="form-label"> Password </label>
-              <div class="input-group mb-3">
-                <input
-                  [type]="passwordType"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                  placeholder="Enter your password"
-                  [(ngModel)]="password"
-                />
-                <span class="input-group-text" (click)="togglePassword()">
-                  <i
-                    class="fas"
-                    [class.fa-eye]="!isPasswordVisible"
-                    [class.fa-eye-slash]="isPasswordVisible"
-                  ></i>
-                </span>
-              </div>
-            </div>
-          </div>
-          <!-- end password -->
-          <div class="col-12">
-            <!-- begin form controls -->
-            <button class="btn btn-primary" type="submit">Sign In</button>
-            <!-- end form controls -->
+        <div class="form-group mb-2">
+          <label for="username" class="form-label"> Username </label>
+          <input
+            type="text"
+            class="form-control"
+            id="username"
+            name="username"
+            placeholder="Enter your username"
+            [(ngModel)]="username"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password" class="form-label"> Password </label>
+          <div class="input-group mb-3">
+            <input
+              [type]="passwordType"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="Enter your password"
+              [(ngModel)]="password"
+            />
+            <span class="input-group-text" (click)="togglePassword()">
+              <i
+                class="fas"
+                [class.fa-eye]="!isPasswordVisible"
+                [class.fa-eye-slash]="isPasswordVisible"
+              ></i>
+            </span>
           </div>
         </div>
+        <button class="btn btn-primary" type="submit">Sign In</button>
       </form>
-      <!-- end authentication form -->
-      <!-- begin footnote -->
       <div class="footnote">
         <span>Do not have an account?</span>
         <a [routerLink]="['/auth', 'register']">Sign Up</a>
       </div>
-      <!-- end footnote -->
     </div>
 
     <div class="illustration">
