--- a/src/app/components/auth/register.component.html
+++ b/src/app/components/auth/register.component.html
@@ -7,115 +7,111 @@
     </div>
 
     <div class="form">
-      <!-- begin error message -->
-      <feedback-message [message]="message" [error]="true"></feedback-message>
-      <!-- end error message -->
-      <!-- begin registration form -->
+      <div
+        class="bg-danger mt-2 p-2 text-center text-white"
+        *ngIf="message != null"
+      >
+        {{ message }}
+      </div>
       <form novalidate #form="ngForm" (ngSubmit)="signup(form)">
-        <div class="row">
-          <!-- begin first name -->
-          <div class="col-6">
-            <div class="form-group mb-2">
-              <label for="firstName" class="form-label"> First Name </label>
-              <input
-                type="text"
-                class="form-control"
-                id="firstName"
-                name="firstName"
-                required
-                placeholder="e.g. Behnaz, Peeter"
-                [(ngModel)]="user.firstName"
-              />
-            </div>
-          </div>
-          <!-- end first name -->
-          <!-- begin last name -->
-          <div class="col-6">
-            <div class="form-group mb-2">
-              <label for="lastName" class="form-label"> Last Name </label>
-              <input
-                type="text"
-                class="form-control"
-                id="lastName"
-                name="lastName"
-                required
-                placeholder="e.g. Behnaz, Peeter"
-                [(ngModel)]="user.lastName"
-              />
-            </div>
-          </div>
-          <!-- end last name -->
-          <!-- begin email -->
-          <div class="col-12">
-            <div class="form-group mb-2">
-              <label for="email" class="form-label"> Email </label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-                required
-                placeholder="e.g. behnaz@gmail.com"
-                [(ngModel)]="user.email"
-              />
-            </div>
-          </div>
-          <!-- end email -->
-          <!-- begin username -->
-          <div class="col-12">
-            <div class="form-group mb-2">
-              <label for="username" class="form-label"> Username </label>
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                name="username"
-                required
-                placeholder="e.g. lucas1, richard3"
-                [(ngModel)]="user.username"
-              />
-            </div>
-          </div>
-          <!-- end username -->
-          <!-- begin password -->
-          <div class="col-12">
-            <div class="form-group">
-              <label for="password" class="form-label"> Password </label>
-              <div class="input-group mb-3">
-                <input
-                  [type]="passwordType"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                  required
-                  placeholder="e.g. abDe12%3"
-                  [(ngModel)]="user.password"
-                />
-                <span class="input-group-text" (click)="togglePassword()">
-                  <i
-                    class="fas"
-                    [class.fa-eye]="!isPasswordVisible"
-                    [class.fa-eye-slash]="isPasswordVisible"
-                  ></i>
-                </span>
-              </div>
-            </div>
-          </div>
-          <!-- end password -->
-          <!-- begin form controls -->
-          <div class="col-12">
-            <button class="btn btn-primary" type="submit">Sign Up</button>
-          </div>
-          <!-- end form controls -->
+        <div class="form-group mb-2">
+          <label for="firstName" class="form-label"> First Name </label>
+          <input
+            type="text"
+            class="form-control"
+            id="firstName"
+            name="firstName"
+            required
+            placeholder="e.g. Behnaz, Peeter"
+            [(ngModel)]="user.firstName"
+          />
         </div>
+        <div class="form-group mb-2">
+          <label for="lastName" class="form-label"> Last Name </label>
+          <input
+            type="text"
+            class="form-control"
+            id="lastName"
+            name="lastName"
+            required
+            placeholder="e.g. Behnaz, Peeter"
+            [(ngModel)]="user.lastName"
+          />
+        </div>
+        <div class="form-group mb-2">
+          <label for="email" class="form-label"> Email </label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            required
+            placeholder="e.g. behnaz@gmail.com"
+            [(ngModel)]="user.email"
+          />
+        </div>
+        <div class="form-group mb-2">
+          <label for="username" class="form-label"> Username </label>
+          <input
+            type="text"
+            class="form-control"
+            id="username"
+            name="username"
+            required
+            placeholder="e.g. lucas1, richard3"
+            [(ngModel)]="user.username"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password" class="form-label"> Password </label>
+          <div class="input-group mb-3">
+            <input
+              [type]="passwordType"
+              class="form-control"
+              id="password"
+              name="password"
+              required
+              placeholder="e.g. abDe12%3"
+              [(ngModel)]="user.password"
+            />
+            <span class="input-group-text" (click)="togglePassword()">
+              <i
+                class="fas"
+                [class.fa-eye]="!isPasswordVisible"
+                [class.fa-eye-slash]="isPasswordVisible"
+              ></i>
+            </span>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="passwordConfirm" class="form-label">
+            Confirm Password
+          </label>
+          <div class="input-group mb-3">
+            <input
+              [type]="passwordType"
+              class="form-control"
+              id="passwordConfirm"
+              name="passwordConfirm"
+              required
+              placeholder="e.g. abDe12%3"
+              [(ngModel)]="confirmPassword"
+            />
+            <span class="input-group-text" (click)="togglePassword()">
+              <i
+                class="fas"
+                [class.fa-eye]="!isPasswordVisible"
+                [class.fa-eye-slash]="isPasswordVisible"
+              ></i>
+            </span>
+          </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </form>
-      <!-- end registration form -->
-      <!-- begin footnote -->
       <div class="footnote">
         <span>Already have an account?</span>
         <a [routerLink]="['/auth', 'login']">Sign In</a>
       </div>
-      <!-- end footnote -->
     </div>
 
     <div class="illustration">
