--- a/src/app/components/index/index.component.scss
+++ b/src/app/components/index/index.component.scss
@@ -7,6 +7,7 @@
   background-color: white;
   border-radius: $border-radius;
   padding: $default-distance * 1;
+  margin-bottom: $default-distance * 1.375;
 
   & > .name {
     font-weight: 300;
