--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,5 +15,5 @@ body {
 body {
   min-height: 100%;
   position: relative;
-  background-color: #f2f2f2 !important;
+  background-color: var(--color-background) !important;
 }
