--- a/src/app/components/shared/bracket/bracket.component.scss
+++ b/src/app/components/shared/bracket/bracket.component.scss
@@ -159,7 +159,7 @@
               &.winner {
                 border-width: 0;
                 color: var(--color-white);
-                background-color: var(--color-green);
+                background-color: var(--color-primary);
               }
 
               & > span {
@@ -178,7 +178,7 @@
           &.filled .line,
           &.filled.bottom .bracket:after,
           &.filled.top .bracket:before {
-            border-color: var(--color-green);
+            border-color: var(--color-primary);
           }
 
           & > .line {
