--- a/src/app/components/shared/layout/header.component.scss
+++ b/src/app/components/shared/layout/header.component.scss
@@ -1,5 +1,5 @@
 nav {
-  background-color: var(--bs-primary);
+  background-color: var(--color-primary);
 
   & > .container {
     & > .navbar-brand {
@@ -8,7 +8,7 @@ nav {
 
     & > .navbar-nav {
       & > .nav-item > .nav-link {
-        color: white;
+        color: var(--color-white);
       }
     }
   }
