--- a/src/app/components/tournament/list.component.html
+++ b/src/app/components/tournament/list.component.html
@@ -35,7 +35,7 @@
             <tr>
               <th class="text-center"></th>
               <th>Name</th>
-              <th class="text-center">No. of players</th>
+              <th class="text-center">No. of participants</th>
               <th class="text-center">Start Date</th>
               <th class="text-center">Done</th>
               <th class="text-center" colspan="3">Actions</th>
