--- a/src/app/components/shared/alert/alert.component.scss
+++ b/src/app/components/shared/alert/alert.component.scss
@@ -6,8 +6,8 @@
   right: 0;
   bottom: 0;
   z-index: -1;
+  position: fixed;
   visibility: hidden;
-  position: absolute;
   background-color: rgba(100, 100, 100, 0.5);
 
   &.active {
@@ -19,13 +19,23 @@
     top: 50%;
     left: 50%;
     width: 100%;
-    height: 400px;
     max-width: 400px;
     position: absolute;
     border-radius: $border-radius;
-    padding: $default-distance * 1.5;
+    padding: $default-distance * 1;
     transform: translate(-50%, -50%);
-    background-color: var(--color-white);
+    background-color: var(--color-theme);
+
+    & > .alert-dismiss {
+      cursor: pointer;
+      position: absolute;
+      border-radius: $border-radius;
+      top: -#{$default-distance * 0.5};
+      right: -#{$default-distance * 0.5};
+      background-color: var(--color-theme);
+      box-shadow: 0 0 5px 0 rgba(50, 50, 50, 0.75);
+      padding: $default-distance * 0.25 $default-distance * 0.65;
+    }
 
     & > .alert-header {
       font-weight: 600;
@@ -43,10 +53,6 @@
           margin-bottom: 0;
         }
       }
-    }
-
-    & .alert-footer {
-      float: right;
     }
   }
 }
